working with meshes now

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,6 +35,7 @@ PROJECT_BUILD_PATH    ?= .
 PROJECT_SOURCE_FILES  ?= \
     game.c \
 		rigidbody.c \
+		cuboid_rb.c \
 
 # raylib library variables
 RAYLIB_SRC_PATH       ?= /usr/local/include/
